--- a/project1.html
+++ b/project1.html
@@ -16,10 +16,10 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="home.html" class="title">Björg Eva Steinþórsdóttir</a>
+				<a href="index.html" class="title">Björg Eva Steinþórsdóttir</a>
 				<nav>
 					<ul>
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="project1.html" class="active">Project 1</a></li>
                         <li><a href="generic.html" class="active">Project 2</a></li>
                         <li><a href="generic.html" class="active">Project 3</a></li>
