--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic</title>
+		<title>Making a website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,8 +34,19 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Making this website </h1>
-							<p> Prior to the making of this website I did not have experience in html. Thankfully we were allowed to build our website on a foundation of any of the website templates by <a href="https://html5up.net">html5up. </a> I chose the one called <a href="https://html5up.net/hyperspace">Hyperspace.</a> </p>
+							<h1 class="major">Making a website </h1>
+                            <h2>Introduction</h2>
+                            <p>This website is made as a part of VÉL403G, a course at the University of Iceland, spring semester 2021. The course is tought by Hafliði Ásgeirsson.
+                            The purpose of the website is to keep track of all projects through the semester.</p>
+                            <h2>Gathering information</h2>
+                            <p>Before I started making the website (this one!) I watched the videos related to this first project of the semester.</p>
+                            <ul class="actions fit small">
+				            <li><a href="https://youtu.be/xUZUzCrjMzY" class="button primary fit">Video 1</a></li>
+				            <li><a href="https://youtu.be/qgW9LAgczQk" class="button primary fit">Video 2</a></li>
+				            <li><a href="https://youtu.be/L_oa7XToChU" class="button primary fit">Video 3</a></li></ul>
+                            <p>As a guide for various parts of the project <a href="https://www.w3schools.com">w3schools</a> came in handy.</p>
+                            <h2>The process of making and publishing the website</h2>
+							<p> Prior to the making of this website I did not have experience in html. Thankfully we were allowed to build our website on a foundation of any of the website templates by <a href="https://html5up.net">html5up.</a> I chose the one called <a href="https://html5up.net/hyperspace">Hyperspace.</a> </p>
                             <p> To make the website my own, and edit the code for the website, I used <a href="http://brackets.io">Brackets.</a> Other applications can be used for this purpose, but I chose to use Brackets because of the possibility of Live preview. Live preview allows you to see each change you make pop up as soon as you click save. </p>
                             <p> After I downloaded both the Hyperspace template and the Bracket application I set up git on my computer before moving on. To do so, click <a href="https://git-scm.com/downloads">git</a> and follow the instructions. I installed <a href="https://brew.sh">Homebrew</a>, wich is one of the possibilities shown in the instructions, and then continued to install git. This was done with the following inputs in Terminal: </p>
                             <pre><code> /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" </code></pre>
