--- a/project1.html
+++ b/project1.html
@@ -41,14 +41,14 @@
                             <h2>Gathering information</h2>
                             <p>Before I started making the website (this one!) I watched the videos related to this first project of the semester.</p>
                             <ul class="actions fit small">
-				            <li><a href="https://youtu.be/xUZUzCrjMzY" class="button primary fit">Video 1</a></li>
-				            <li><a href="https://youtu.be/qgW9LAgczQk" class="button primary fit">Video 2</a></li>
-				            <li><a href="https://youtu.be/L_oa7XToChU" class="button primary fit">Video 3</a></li></ul>
-                            <p>As a guide for various parts of the project <a href="https://www.w3schools.com">w3schools</a> came in handy.</p>
+				            <li><a href="https://youtu.be/xUZUzCrjMzY" class="button primary fit" target="_blank">Video 1</a></li>
+				            <li><a href="https://youtu.be/qgW9LAgczQk" class="button primary fit" target="_blank">Video 2</a></li>
+				            <li><a href="https://youtu.be/L_oa7XToChU" class="button primary fit" target="_blank">Video 3</a></li></ul>
+                            <p>As a guide for various parts of the project <a href="https://www.w3schools.com" target="_blank">w3schools</a> came in handy.</p>
                             <h2>The process of making and publishing the website</h2>
-							<p> Prior to the making of this website I did not have experience in html. Thankfully we were allowed to build our website on a foundation of any of the website templates by <a href="https://html5up.net">html5up.</a> I chose the one called <a href="https://html5up.net/hyperspace">Hyperspace.</a> </p>
-                            <p> To make the website my own, and edit the code for the website, I used <a href="http://brackets.io">Brackets.</a> Other applications can be used for this purpose, but I chose to use Brackets because of the possibility of Live preview. Live preview allows you to see each change you make pop up as soon as you click save. </p>
-                            <p> After I downloaded both the Hyperspace template and the Bracket application I set up git on my computer before moving on. To do so, click <a href="https://git-scm.com/downloads">git</a> and follow the instructions. I installed <a href="https://brew.sh">Homebrew</a>, wich is one of the possibilities shown in the instructions, and then continued to install git. This was done with the following inputs in Terminal: </p>
+							<p> Prior to the making of this website I did not have experience in html. Thankfully we were allowed to build our website on a foundation of any of the website templates by <a href="https://html5up.net" target="_blank">html5up.</a> I chose the one called <a href="https://html5up.net/hyperspace" target="_blank">Hyperspace.</a> </p>
+                            <p> To make the website my own, and edit the code for the website, I used <a href="http://brackets.io" target="_blank">Brackets.</a> Other applications can be used for this purpose, but I chose to use Brackets because of the possibility of Live preview. Live preview allows you to see each change you make pop up as soon as you click save. </p>
+                            <p> After I downloaded both the Hyperspace template and the Bracket application I set up git on my computer before moving on. To do so, click <a href="https://git-scm.com/downloads" target="_blank">git</a> and follow the instructions. I installed <a href="https://brew.sh" target="_blank">Homebrew</a>, wich is one of the possibilities shown in the instructions, and then continued to install git. This was done with the following inputs in Terminal: </p>
                             <pre><code> /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" </code></pre>
                             <p> After Homebrew is installed: </p>
                             <pre><code> $ brew install git </code></pre>
@@ -67,33 +67,32 @@
                                     <p>Be sure to choose Public, NOT Private. This will allow you to publish the website later on.</p> 
                                     <p>Finally click Create repository.</p></li>
                                     <li><b> Step 3: </b><p>Go to the folder where the files for your website are stored on you computer.</p>
-                                    <p>MacOSX:
-                                    Right click the folder and choose New Terminal at Folder</p>
+                                    <p>MacOSX:</p>
+                                    <p>Right click the folder and choose New Terminal at Folder</p>
                                     <p><img src="images/step3.png" alt="" width="300" height="310">
                                     <p>Windows:
                                     Right click and choose Open with Git Bash (or similar)</p></li>
                                     <li><b> Step 4:</b><p>In the github window that opened up after the reposityory was created, copy the circled 
                                     text in the picture below.</p></li>
-                                    <p><img src="images/step4.jpg" alt="" width="500" height="200">
+                                    <p><img src="images/step4.jpg" alt="" width="500" height="200"></p>
                                     <li><b> Step 5:</b> <p>In the terminal window that opened up in step 3, paste the text from github and press enter. The files from the chosen folder should appear on github when you refresh the page from step 4. Please be advised that this could take a few minutes and likely the README file will show up first. </p></li>
                                     <li><b> Step 6:</b><p>When all the files are visible in your new repository go to settings </p></li>
-                                    <p><img src="images/step6.jpg" alt="" width="600" height="90">
+                                    <p><img src="images/step6.jpg" alt="" width="600" height="90"></p>
                                     <li><b> Step 7:</b><p>Scroll down to GitHub pages. Click the Branch menu and choose main, instead of None. </p></li>
                                     <li><b> Step 8:</b><p>Refresh the page and the green banner, wich might be blue at first, should be visible with the link to your published website!</p></li>
-                                    <p><img src="images/step7.jpg" alt="" width="400" height="250">
+                                    <p><img src="images/step7.jpg" alt="" width="400" height="250"></p>
                                     <li><b> Step 9:</b><p>Click the link and check out you website!</p>
                                 </ul>
                             </div>
                         </div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
