--- a/generic.html
+++ b/generic.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Project 1</a></li>
+						<li><a href="project1.html" class="active">Project 1</a></li>
                         <li><a href="generic.html" class="active">Project 2</a></li>
                         <li><a href="generic.html" class="active">Project 3</a></li>
                         <li><a href="generic.html" class="active">CV</a></li>
