--- a/index.html
+++ b/index.html
@@ -92,32 +92,35 @@
 								<section>
 									<span class="icon solid major fa-suitcase"></span>
 									<h3>University of Iceland </h3>
-									<p>2018-2021 B.Sc. Industrial Engineering</p>
+                                    2018-present 
+                                    <br>B.Sc. Industrial Engineering
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Central Bank of Iceland</h3>
-									<p>2019-2021 Back office specialist</p>
+									2019-present
+                                    <br>Back office specialist
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming languages</h3>
-									<p>Basic knowledge of Java and Python, minimun knowledge of html</p>
+									Basic knowledge of Java, Python and R
+                                    <br>Minimum knowledge of html
 								</section>
 								<section>
 									<span class="icon solid major fa-table"></span>
 									<h3>Service jobs</h3>
-									<p>2011-2019</p>
+									2011-2019
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Languages</h3>
-									<p>Icelandic, English an B2 level Norwegian</p>
+									Icelandic, English and B2 level Norwegian
 								</section>
 								<section>
 									<span class="icon solid major fa-plus"></span>
 									<h3>First aid</h3>
-									<p>Certified 2014</p>
+									Certified 2014
 								</section>
 							</div>
 							<ul class="actions">
