--- a/project1.html
+++ b/project1.html
@@ -64,24 +64,24 @@
                                     <p></p>
                                     <li><b> Step 2:</b> <p>Fill in the required field Repository name with a name of your choice (this name will be in the link of you website).</p>
                                     <p><img src="images/step2.jpg" alt="" width="300" height="300">
-                                    <p>Be sure to choose Public, NOT Private. This will allow you to publish the website later on.</p> 
-                                    <p>Finally click Create repository.</p></li>
+                                    <br>Be sure to choose Public, NOT Private. This will allow you to publish the website later on. 
+                                    <br>Finally click Create repository.</li>
                                     <li><b> Step 3: </b><p>Go to the folder where the files for your website are stored on you computer.</p>
-                                    <p>MacOSX:</p>
-                                    <p>Right click the folder and choose New Terminal at Folder</p>
+                                    MacOSX:
+                                    <br>Right click the folder and choose New Terminal at Folder
                                     <p><img src="images/step3.png" alt="" width="300" height="310">
                                     <p>Windows:
                                     Right click and choose Open with Git Bash (or similar)</p></li>
                                     <li><b> Step 4:</b><p>In the github window that opened up after the reposityory was created, copy the circled 
                                     text in the picture below.</p></li>
                                     <p><img src="images/step4.jpg" alt="" width="500" height="200"></p>
-                                    <li><b> Step 5:</b> <p>In the terminal window that opened up in step 3, paste the text from github and press enter. The files from the chosen folder should appear on github when you refresh the page from step 4. Please be advised that this could take a few minutes and likely the README file will show up first. </p></li>
-                                    <li><b> Step 6:</b><p>When all the files are visible in your new repository go to settings </p></li>
+                                    <li><b> Step 5:</b> <p>In the terminal window that opened up in step 3, paste the text from github and press enter. The files from the chosen folder should appear on github when you refresh the page from step 4. </p><p><i>Please be advised that this could take a few minutes and likely the README file will show up first.</i> </p></li>
+                                    <li><b> Step 6:</b><p>When all the files are visible in your new repository go to Settings </p></li>
                                     <p><img src="images/step6.jpg" alt="" width="600" height="90"></p>
-                                    <li><b> Step 7:</b><p>Scroll down to GitHub pages. Click the Branch menu and choose main, instead of None. </p></li>
+                                    <li><b> Step 7:</b><p>Scroll down to GitHub pages. Click the Branch menu and choose <i>main</i>, instead of <i>None</i>. </p></li>
                                     <li><b> Step 8:</b><p>Refresh the page and the green banner, wich might be blue at first, should be visible with the link to your published website!</p></li>
                                     <p><img src="images/step7.jpg" alt="" width="400" height="250"></p>
-                                    <li><b> Step 9:</b><p>Click the link and check out you website!</p>
+                                    <li><b> Step 9:</b><p>Click the link and check out your website!</p>
                                 </ul>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>&copy; Björg Eva Steinþórsdóttir. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
