--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="cv.html" class="button">Full CV</a></li>
 							</ul>
 						</div>
 					</section>
