update im tired

--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
 								<section>
 									<span class="icon solid major fa-suitcase"></span>
 									<h3>University of Iceland </h3>
-                                    2018-present 
-                                    <br>B.Sc. Industrial Engineering
+                                     B.Sc. Industrial Engineering
+                                    <br>2018 - present
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Central Bank of Iceland</h3>
-									2019-present
-                                    <br>Back office specialist
+									Back office specialist
+                                    <br>2019 - present
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming languages</h3>
-									Basic knowledge of Java, Python and R
-                                    <br>Minimum knowledge of html
+									Programming skills in Java, Python and R
+                                    <br>Basic knowledge of html
 								</section>
 								<section>
 									<span class="icon solid major fa-table"></span>
-									<h3>Service jobs</h3>
-									2011-2019
+									<h3>Service and childcare jobs</h3>
+									2010-2019
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
@@ -120,7 +120,8 @@
 								<section>
 									<span class="icon solid major fa-plus"></span>
 									<h3>First aid</h3>
-									Certified 2014
+									Certified 2011 
+                                    <br>Renewed 2015
 								</section>
 							</div>
 							<ul class="actions">
@@ -133,54 +134,24 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
+							<div>
 								<section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>Kvistahlíð 9,<br />
+											550 Sauðárkrókur,<br />
+											Iceland</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">bes53@hi.is</a>
+                                            <span>
+                                                <a href="bes53@hi.is">bes53@hi.is </a>  /  <a href="bjorg95@gmail.com">bjorg95@gmail.com</a> 
+                                            </span>
 										</li>
 										<li>
 											<h3>Phone</h3>
 											<span>(+354) 659-3808</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
 										</li>
 									</ul>
 								</section>
