--- a/project1.html
+++ b/project1.html
@@ -21,8 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="project1.html" class="active">Project 1</a></li>
-                        <li><a href="generic.html" class="active">Project 2</a></li>
-                        <li><a href="generic.html" class="active">Project 3</a></li>
+                        <li><a href="project2.html" class="active">Project 2</a></li>
+                        <li><a href="project3.html" class="active">Project 3</a></li>
                         <li><a href="cv.html" class="active">CV</a></li>
 					</ul>
 				</nav>
