--- a/project2.html
+++ b/project2.html
@@ -34,8 +34,8 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">CV</h1>
-							<span class="image fit"><img src="images/ferilskra2.png" alt="" /></span>
+							<h1 class="major"></h1>
+							<span class="image"><img src="images/proj2coming.png" alt="" /></span>
 						</div>
 					</section>
 
