--- a/project3.html
+++ b/project3.html
@@ -34,11 +34,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">CV</h1>
-							<span class="image fit"><img src="images/ferilskra2.png" alt="" /></span>
+							<h1 class="major"></h1>
+							<span class="image"><img src="images/proj3coming.png" alt="" /></span>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
