--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic</title>
+		<title>Get to know me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">CV</h1>
-							<span class="image fit"><img src="images/ferilskra2.png" alt="" /></span>
+							<img src="images/ferilskra2.png" alt="" width="700" height="1000">
 						</div>
 					</section>
 
