--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Welcome</title>
+		<title>Welcome!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">CV</a></li>
+							<li><a href="#two">Get to know me </a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -35,10 +35,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Björg Eva Steinþórsdóttir</h1>
-							<p>Industrial engineering
+							<p>Industrial Engineering
 							- <a href="https://english.hi.is/university_of_iceland">University of Iceland</a>.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Continue</a></li>
 							</ul>
 						</div>
 					</section>
@@ -86,8 +86,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>CV</h2>
-							<p>Below you can see an overview of my studies, jobs and knowledge.</p>
+							<h2>Get to know me </h2>
+							<p>I am a 25 year old Industrial Engineering student from the north of Iceland. Below you can see an overview of my studies, jobs and knowledge. Click the button below to know more!</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-suitcase"></span>
@@ -99,24 +99,28 @@
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Central Bank of Iceland</h3>
 									Back office specialist
-                                    <br>2019 - present
+                                    <p>2019 - present</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Programming languages</h3>
-									Programming skills in Java, Python and R
-                                    <br>Basic knowledge of html
-								</section>
-								<section>
-									<span class="icon solid major fa-table"></span>
-									<h3>Service and childcare jobs</h3>
-									2010-2019
-								</section>
-								<section>
+                                <section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Languages</h3>
 									Icelandic, English and B2 level Norwegian
+                                    <br>
 								</section>
+                                <section>
+									<span class="icon solid major fa-table"></span>
+									<h3>Service and childcare jobs</h3>
+                                    <p>2010-2019</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Technical knowledge</h3>
+									Programming skills in Java, Python and R
+                                    <br>Basic knowledge of html
+                                    <br>Great skills in MS Word, Excel, PPT, Project
+                                    <br> Experience in AutoCad and Inventor
+								</section>
+								
 								<section>
 									<span class="icon solid major fa-plus"></span>
 									<h3>First aid</h3>
@@ -124,8 +128,8 @@
                                     <br>Renewed 2015
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="cv.html" class="button">Full CV</a></li>
+							<ul class="actions fit">
+								<li><a href="cv.html" class="button fit">See my full CV</a></li>
 							</ul>
 						</div>
 					</section>
