--- a/project1.html
+++ b/project1.html
@@ -58,32 +58,37 @@
                             <div class="col-6 col-12-medium">
                                 <ul>
                                     <li><b>Step 0 (if you don‘t have a github account):  </b>
-                                    <p>Visit github.com and click sign up, the website will lead you through the making of an account.</p></li>
-                                    <li> <b> Step 1:</b> <p>In the repositories column on the left side of the homepage (after you log in) click New (sýna mynd)</li>
+                                        <p>Visit github.com and click <i>sign up</i>, the website will lead you through the making of an account.</p></li>
+                                    <li> <b> Step 1:</b> <p>In the repositories column on the left side of the homepage (after you log in) click <i>New</i> </li>
                                     <img src="images/step1.jpg" alt="" width="400" height="200">
                                     <p></p>
-                                    <li><b> Step 2:</b> <p>Fill in the required field Repository name with a name of your choice (this name will be in the link of you website).</p>
+                                    <li><b> Step 2:</b> <p>Fill in the required field <i>Repository name</i> with a name of your choice (the name you choose will be in the link of you website).</p>
                                     <p><img src="images/step2.jpg" alt="" width="300" height="300">
-                                    <br>Be sure to choose Public, NOT Private. This will allow you to publish the website later on. 
-                                    <br>Finally click Create repository.</li>
+                                        <br>Be sure to choose <i>Public</i>, NOT <i>Private</i>. This will allow you to publish the website later on. 
+                                        <br>Finally click <i>Create repository</i>.</li>
                                     <li><b> Step 3: </b><p>Go to the folder where the files for your website are stored on you computer.</p>
                                     MacOSX:
-                                    <br>Right click the folder and choose New Terminal at Folder
+                                    <br>Right click the folder and choose <i>New Terminal at Folder</i>.
                                     <p><img src="images/step3.png" alt="" width="300" height="310">
                                     <p>Windows:
-                                    Right click and choose Open with Git Bash (or similar)</p></li>
+                                    Right click and choose <i>Open with Git Bash</i> (or similar)</p></li>
                                     <li><b> Step 4:</b><p>In the github window that opened up after the reposityory was created, copy the circled 
                                     text in the picture below.</p></li>
                                     <p><img src="images/step4.jpg" alt="" width="500" height="200"></p>
                                     <li><b> Step 5:</b> <p>In the terminal window that opened up in step 3, paste the text from github and press enter. The files from the chosen folder should appear on github when you refresh the page from step 4. </p><p><i>Please be advised that this could take a few minutes and likely the README file will show up first.</i> </p></li>
-                                    <li><b> Step 6:</b><p>When all the files are visible in your new repository go to Settings </p></li>
+                                    <li><b> Step 6:</b><p>When all the files are visible in your new repository go to Settings. </p></li>
                                     <p><img src="images/step6.jpg" alt="" width="600" height="90"></p>
-                                    <li><b> Step 7:</b><p>Scroll down to GitHub pages. Click the Branch menu and choose <i>main</i>, instead of <i>None</i>. </p></li>
+                                    <li><b> Step 7:</b><p>Scroll down to GitHub pages. Click the Branch drop down list and choose <i>main</i>, instead of <i>None</i>. </p></li>
                                     <li><b> Step 8:</b><p>Refresh the page and the green banner, wich might be blue at first, should be visible with the link to your published website!</p></li>
                                     <p><img src="images/step7.jpg" alt="" width="400" height="250"></p>
                                     <li><b> Step 9:</b><p>Click the link and check out your website!</p>
                                 </ul>
                             </div>
+                            <h2>Organizing the website</h2>
+                            <p>After I had successfully uploaded the template to my new GitHub repository I started writing down the description of the project and planning how my website should be organized. </p>
+                            <p>I wanted the to make the website as user friendly as I could. Therefore I decided that everything that will be displayed on it for this course should be accessible with one click (and maybe a little scroll). Due to that decision the homepage will display all finished projects, and upcoming ones, so that they can be accessed from there. Scrolling further down I made a brief introduction to what can be found in my CV with an option to look at the full CV, if that is of interest. </p>
+                            <p> When any of the projects, or the CV, has been clicked a menu bar appears at the top of the page so that the reader can click any of the other pages, and does not have to revisit the homepage before being able to access the next page of choice.</p> 
+                            <p>When setting up the CV page I started out with making a page similar to this project but after a while I realized it wasn't as clean and professional as I wanted it to look. I came to the conclusion that using a graphic design platform called <a href="https://www.canva.com"target="_blank">Canva</a></p> would be the most efficient way to achive the desired results.
                         </div>
 					</section>
 			</div>
