--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,13 @@
 		<title>Get to know me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!-- ICON - Chrome -->
+        <link rel="icon" type="image/png" href="images/icon/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="images/icon/favicon-32x32.png" sizes="32x32">
+        
+    <!-- ICON - other browsers -->
+        <link rel="icon" type="image/x-icon" href="images/icon/favicon.ico" >
+        <link rel="shortcut icon" type="image/x-icon" href="images/icon/favicon.ico"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,9 +27,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="project1.html" class="active">Project 1</a></li>
-                        <li><a href="project2.html" class="active">Project 2</a></li>
-                        <li><a href="project3.html" class="active">Project 3</a></li>
+						<li><a href="project1.html">Project 1</a></li>
+                        <li><a href="project2.html">Project 2</a></li>
+                        <li><a href="project3.html">Project 3</a></li>
                         <li><a href="cv.html" class="active">CV</a></li>
 					</ul>
 				</nav>
@@ -45,7 +52,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Björg Eva Steinþórsdóttir. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
