--- a/project1.html
+++ b/project1.html
@@ -113,7 +113,17 @@
                             <p><br>Lastly I split up the text with headers for better readability. The elements page that comes with the template download came in handy for that, as well as styles, buttons and more. The elements page is well organized to show several clever ways to make the webpage look and function better. Here is a sample from the page:</p>
                             <img src="images/elem.png" alt="" width="850" height="250">
                             <hr />
-                            That concludes the main parts of this project's process. The resources we were given for the project were maybe not many but all of them were extremely useful. It shows that knowing where and how to look for information can get you far, even with little experience. 
+                            <h2>Updating the website</h2>
+                            When a change has been implemented pushing the change to the repository with git is the next step, so that the change is visible to others. In the terminal for the local repository the following is typed in: 
+                            <br>
+                            <br><code>$ git commit -m 'a describing word of the last change'</code>
+                            <br>
+                            <br> Where the <code>' '</code> is neccesary. Next type:
+                            <br>
+                            <br><code>$ git push</code>
+                            <br>
+                            <br> And your change should be uploaded in a few moments!
+                            <p><br>That concludes the main parts of this project's process. The resources we were given for the project were maybe not many but all of them were extremely useful in pointing us in the right direction. It shows that knowing where and how to look for information can get you far, even with little experience. </p>
                         </div>
 					</section>
 			</div>
