--- a/project1.html
+++ b/project1.html
@@ -118,9 +118,12 @@
                             <br>
                             <br><code>$ git add .</code>
                             <br>
+                            Followed by:
+                            <br>
                             <br><code>$ git commit -m 'a describing word of the last change'</code>
                             <br>
-                            <br> Where the <code>' '</code> is neccesary. Next type:
+                            <br> Where the <code>' '</code> is neccesary. 
+                            <br>Next type:
                             <br>
                             <br><code>$ git push</code>
                             <br>
