--- a/project1.html
+++ b/project1.html
@@ -114,7 +114,8 @@
                             <img src="images/elem.png" alt="" width="850" height="250">
                             <hr />
                             <h2>Updating the website</h2>
-                            When a change has been implemented pushing the change to the repository with git is the next step, so that the change is visible to others. In the terminal for the local repository the following is typed in: 
+                            When a change has been implemented pushing the change to the repository with git is the next step, so that the change is visible to others. 
+                            <br>In the terminal for the local repository the following is typed in: 
                             <br>
                             <br><code>$ git add .</code>
                             <br>
@@ -123,6 +124,7 @@
                             <br><code>$ git commit -m 'a describing word of the last change'</code>
                             <br>
                             <br> Where the <code>' '</code> is neccesary. 
+                            <br>
                             <br>Next type:
                             <br>
                             <br><code>$ git push</code>
