--- a/project1.html
+++ b/project1.html
@@ -116,18 +116,13 @@
                             <h2>Updating the website</h2>
                             When a change has been implemented pushing the change to the repository with git is the next step, so that the change is visible to others. 
                             <br>In the terminal for the local repository the following is typed in: 
-                            <br>
                             <br><code>$ git add .</code>
                             <br>
-                            Followed by:
-                            <br>
-                            <br><code>$ git commit -m 'a describing word of the last change'</code>
+                            Followed by: <code>$ git commit -m 'a describing word of the last change'</code>
                             <br>
                             <br> Where the <code>' '</code> is neccesary. 
                             <br>
-                            <br>Next type:
-                            <br>
-                            <br><code>$ git push</code>
+                            <br>Next type: <code>$ git push</code>
                             <br>
                             <br> And your change should be uploaded in a few moments!
                             <p><br>That concludes the main parts of this project's process. The resources we were given for the project were maybe not many but all of them were extremely useful in pointing us in the right direction. It shows that knowing where and how to look for information can get you far, even with little experience. </p>
