--- a/project1.html
+++ b/project1.html
@@ -115,10 +115,9 @@
                             <hr />
                             <h2>Updating the website</h2>
                             When a change has been implemented pushing the change to the repository with git is the next step, so that the change is visible to others. 
-                            <br>In the terminal for the local repository the following is typed in: 
-                            <br><code>$ git add .</code>
+                            <br>In the terminal for the local repository the following is typed in: <code>$ git add .</code>
                             <br>
-                            Followed by: <code>$ git commit -m 'a describing word of the last change'</code>
+                            <br>Followed by: <code>$ git commit -m 'a describing word of the last change'</code>
                             <br>
                             <br> Where the <code>' '</code> is neccesary. 
                             <br>
